fixing a problem with error messages alignement

--- a/src/components/ErrorOrSuccessMessage/errororsuccessmessages.scss
+++ b/src/components/ErrorOrSuccessMessage/errororsuccessmessages.scss
@@ -2,4 +2,6 @@
   position: fixed;
   z-index: 5;
   margin: auto;
+  left: 0;
+  right: 0;
 }
